--- a/app/src/theme/variables.scss
+++ b/app/src/theme/variables.scss
@@ -34,10 +34,10 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
+  primary:    #00796B,
+  secondary:  #00BCD4,
+  danger:     #212121,
+  light:      #B2DFDB,
   dark:       #222
 );
 
