--- a/app/src/pages/perfil/perfil.scss
+++ b/app/src/pages/perfil/perfil.scss
@@ -1,3 +1,11 @@
 page-perfil {
+  .card-md {
+      margin: 0px;
+      width: 100%;
+  }
 
+  .card-ios {
+      margin: 0px;
+      width: 100%;
+  }
 }
