Ajuste a los pipes

--- a/app/src/app/app.scss
+++ b/app/src/app/app.scss
@@ -52,18 +52,14 @@
     font-weight: normal;
     color: rgba(60, 60, 60, 0.7);
     padding: 0;
-    border-top-left-radius: 26px;
-    border-top-right-radius: 26px;
 }
 .tabs-ios .tab-button {
     min-height: 5.6rem;
     font-weight: normal;
     color: rgba(60, 60, 60, 0.7);
     padding: 0;
-    border-top-left-radius: 26px;
-    border-top-right-radius: 26px;
 }
-
+/*
 .alert-md .alert-wrapper {
     border-radius: 2px;
     max-width: 300px !important;
@@ -90,3 +86,4 @@
     text-align: start;
      padding: 0px;
 }
+*/
