--- a/app/src/pages/about/about.scss
+++ b/app/src/pages/about/about.scss
@@ -14,26 +14,36 @@ page-about {
   .item-divider-md {
     border-bottom: 0px solid #dedede;
   }
-  @-webkit-keyframes slideInBothWays {
-    0% {
-      -webkit-transform: translate3d(-100%,0,0);
-    }
 
-    50% {
-      -webkit-transform: translate3d(50%,0,0);
-    }
-
-    100% {
-      -webkit-transform: translate3d(0,0,0);
-    }
-  }
 
   .slide-in-both-ways {
-     -webkit-animation: slideInBothWays ease-in 1;
-    animation: slideInBothWays ease-in 1;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-    -webkit-animation-duration: 750ms;
-    animation-duration: 750ms;
+    -webkit-animation-name: slideInDown;
+    animation-name: slideInDown;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+  }
+  @-webkit-keyframes slideInDown {
+    0% {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+    visibility: visible;
+    }
+    100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    }
+    }
+    @keyframes slideInDown {
+    0% {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+    visibility: visible;
+    }
+    100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    }
   }
 }
